# apps/auth-service/src/controller/auth.controller.ts
@@ -1,9 +1,10 @@
 import { NextFunction, Request, Response } from "express";
-import { checkOtpRestrictions, sendOtp, trackOtp, validateRegistrationData, verifyOtp } from "../utils/auth.helper";
+import { checkOtpRestrictions, handleForgotPassword, sendOtp, trackOtp, validateRegistrationData, verifyForgotPasswordOtp, verifyOtp } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma";
-import { ValidationError } from "@packages/error-handler";
+import { AuthError, ValidationError } from "@packages/error-handler";
 import bcrypt from "bcryptjs";
-
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // Register a new user 
 export const userRegistration = async (req:Request, res:Response, next:NextFunction) => {
@@ -68,3 +69,120 @@ export const verifyUser = async (req:Request, res:Response, next:NextFunction) =
         throw next(error);
     }
 }
+
+
+// Login user
+export const loginUser = async (req:Request, res:Response, next:NextFunction) => {
+    try {
+        const {email, password} = req.body;
+
+        if (!email || !password) {
+            throw next(new ValidationError("Email and password are required!"));
+        }
+        
+        const user = await prisma.users.findUnique({where : { email: email } });
+        
+        if (!user) {
+            throw next(new AuthError("User does not exist!"));
+        }
+        
+        // verify password
+        const isMatch = await bcrypt.compare(password, user.password!);
+        
+        if(!isMatch) {
+            throw next(new AuthError("Invalid email or passoword!"));
+        }
+
+        // Generate access and refresh token
+        const accessToken = jwt.sign(
+            { user: user.id, role: "user" }, 
+            process.env.ACCESS_TOKEN_SECRET as string,
+            { expiresIn: "15m" }
+        );
+        
+        const refreshToken = jwt.sign(
+            { user: user.id, role: "user" }, 
+            process.env.REFRESH_TOKEN_SECRET as string,
+            { expiresIn: "7d" }
+        );
+
+        // store the access and refresh token in httpOnly secure cookie
+        setCookie(res, "refresh_token", refreshToken );
+        setCookie(res, "access_token", accessToken );
+
+        res.status(200).json({
+            message: "Login Successful!",
+            user: {
+                id: user.id,
+                email: user.email,
+                name: user.name
+            }
+        })
+
+    } catch (error) {
+        throw next(error);
+    }
+}
+
+
+// user forgot password
+export const userForgotPassword = async (req:Request, res:Response, next:NextFunction) => {
+    try {
+        await handleForgotPassword(req, res, next, 'user');
+    } catch (error) {
+        throw next(error);
+    }
+}
+
+
+// Verify forgot passwor otp
+export const verifyForgotPassword = async (req:Request, res:Response, next:NextFunction) => {
+    try {
+        await verifyForgotPasswordOtp(req, res, next);
+
+    } catch (error) {
+        throw next(error);
+    }
+}
+
+
+// Reset user passsword
+export const resetUserPassword = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const {email, newPassword} = req.body;
+
+        if (!email || !newPassword) {
+            throw next(new ValidationError("Email and password is required."));
+        }
+
+        const user = await prisma.users.findUnique({ where : { email }});
+
+        if (!user) {
+            throw next(new ValidationError("User does not exist"));
+        }
+
+        // comapre old pass with new pass
+        const isSame = await bcrypt.compare(newPassword, user.password!);
+
+        if(isSame) {
+            throw next(new ValidationError("New password cannot be the same as the old password"));
+        }
+
+        // hash the new password
+        const hashedPassword = await bcrypt.hash(newPassword, 10);
+
+        await prisma.users.update({
+            where : { email },
+            data : { password : hashedPassword }
+        })
+
+        res.status(200).json({
+            message: "Password reset successfully!"
+        });
+
+    } catch (error) {
+        throw next(error);        
+    }
+}
+
+// logout user
